<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/basic_background">
    
        <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/user_name"
           android:textSize="20sp"
           android:textStyle="bold"
           tools:context=".AddUserActivity" />

               <EditText
                   android:id="@+id/retailer_add_user_name"
                   android:layout_width="0dip"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:ems="10"
                   android:hint=""
                   android:inputType="text" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
        

        <LinearLayout
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/user_pwd"
           android:textSize="20sp"
           android:textStyle="bold"
           tools:context=".AddUserActivity" />

               <EditText
                   android:id="@+id/retailer_add_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:inputType="textPassword" />
        
    </LinearLayout>


                <LinearLayout
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/confirm_pwd"
           android:textSize="16sp"
           android:textStyle="bold"
           tools:context=".AddUserActivity" />

               <EditText
                   android:id="@+id/retailer_add_confirm_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:inputType="textPassword" />
        
    </LinearLayout>

                <Button
                    android:id="@+id/retailer_add_user_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onAddUserClick"
                    android:text="@string/create_account"
                    android:textSize="20sp"
                    android:textStyle="normal|bold|italic"
                    android:typeface="serif" />

</LinearLayout>



